feat: Add SMC and ICT concepts to Strategy Engine and Builder
